@@ -44,9 +44,9 @@ content of dictionary references.
 "
 license = "BSD License, http://www.opensource.org/licenses/bsd-license.php"
 version = 2.11.0
-version.api = 2.10.0
+version.api = 2.11.0
 stability.release = snapshot
-stability.api = stable
+stability.api = beta
 
 authors[] = "Laurent Laville, farell, pear@laurent-laville.org"
 contributors[] = "Remi Collet, remicollet"
@@ -56,6 +56,13 @@ notes = "
 
 Additions and changes:
 - upgrade mongo reference to version 1.3.0
+- upgrade memcache reference to version 3.0.7
+- fix amqp reference (thanks to Remi Collet)
+- fix memcached reference (thanks to Remi Collet)
+- fix memcache reference (thanks to Remi Collet)
+- fix imagick reference (thanks to Remi Collet)
+- interfaces ArrayAcess, Iterator, IteratorAggregate, Serializable, Traversable
+were moved form SPL to Core since PHP 5.3.0
 
 Bug fixes:
 - none
