@@ -23,20 +23,25 @@ content of dictionary references.
   <email />
   <active>yes</active>
  </contributor>
- <date>2012-11-27</date>
- <time>21:51:32</time>
+ <date>2012-12-03</date>
+ <time>15:56:25</time>
  <version>
-  <release>2.11.0snapshot20121127</release>
-  <api>2.10.0</api>
+  <release>2.11.0snapshot20121203</release>
+  <api>2.11.0</api>
  </version>
  <stability>
   <release>snapshot</release>
-  <api>stable</api>
+  <api>beta</api>
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
  <notes>
 Additions and changes:
 - upgrade mongo reference to version 1.3.0
+- upgrade memcache reference to version 3.0.7
+- fix amqp reference (thanks to Remi Collet)
+- fix memcached reference (thanks to Remi Collet)
+- fix memcache reference (thanks to Remi Collet)
+- fix imagick reference (thanks to Remi Collet)
 
 Bug fixes:
 - none
@@ -1262,6 +1267,9 @@ Bug fixes:
    <file baseinstalldir="Bartlett" name="README.markdown" role="doc">
     <tasks:replace from="@package_version@" to="version" type="package-info" />
    </file>
+   <file baseinstalldir="Bartlett" name="reference.skeleton.tpl" role="data">
+    <tasks:replace from="@package_version@" to="version" type="package-info" />
+   </file>
   </dir> <!-- / -->
  </contents>
  <dependencies>
@@ -1346,18 +1354,23 @@ Bug fixes:
  <changelog>
   <release>
    <version>
-    <release>2.11.0snapshot20121127</release>
-    <api>2.10.0</api>
+    <release>2.11.0snapshot20121203</release>
+    <api>2.11.0</api>
    </version>
    <stability>
     <release>snapshot</release>
-    <api>stable</api>
+    <api>beta</api>
    </stability>
-   <date>2012-11-27</date>
+   <date>2012-12-03</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
    <notes>
 Additions and changes:
 - upgrade mongo reference to version 1.3.0
+- upgrade memcache reference to version 3.0.7
+- fix amqp reference (thanks to Remi Collet)
+- fix memcached reference (thanks to Remi Collet)
+- fix memcache reference (thanks to Remi Collet)
+- fix imagick reference (thanks to Remi Collet)
 
 Bug fixes:
 - none
