@@ -23,6 +23,13 @@ PHP_CompatInfo ChangeLog
 
 .Additions and changes:
 * upgrade mongo reference to version 1.3.0
+* upgrade memcache reference to version 3.0.7
+* fix amqp reference (thanks to Remi Collet)
+* fix memcached reference (thanks to Remi Collet)
+* fix memcache reference (thanks to Remi Collet)
+* fix imagick reference (thanks to Remi Collet)
+* interfaces ArrayAcess, Iterator, IteratorAggregate, Serializable, Traversable
+were moved form SPL to Core since PHP 5.3.0
 
 .Bug fixes:
 * none
